<resources>
    <string name="imgPreview"></string>
    <string name="videoPreview"></string>
    <string name="browsImage"></string>
    <string name="videoview"></string>
    <string name="layout_camera"></string>
    <string name="captureImage"></string>
    <string name="AD_UNIT_ID">a153ad46c97ca89</string>
    <string name="app_id">273586246155447</string>
    <string name="app_secret">08fe123d2dfa4e3a86744e85537c0f75</string>
    <string name="app_name">Remote Eyes</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="birth_day">Birth Day</string>
    <string name="hello_world">Hello world!</string>
    <string name="bttn_return">return</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">E-mail</string>
    <string name="undo">Undo</string>
    <string name="password">Password</string>
    <string name="term_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="location_time">Location time:  </string>
    <string name="chall_list">Current Challenges Nearby - List </string>
    <string name="chall_map">Current Challenges Nearby - Map </string>
    <string name="tv_term">You have committed not to infringe personal or intellectual property by posting this Challenge and/or consequently using of the obtained visual material, as per Terms &amp; Conditions.</string>
    <string name="contentDescription">contentDescription</string>
    <string name="new_challenge_title">&#160;New Local Challenge</string>
    <string name="new_global_challenge_title">&#160;New Global Challenge</string>
    <string name="title_challenge_example">Take photos of one dog on the boat</string>
    <string name="submit"><b><i>Submit</i></b></string>
    <string name="cancel"><b><i>Cancel</i></b></string>
    <string name="location">Location:</string>
    <string name="line_location">________________</string>
    <string name="line_time">______</string>
    <string name="duration"><b><i>Duration:</i></b></string>
    <string name="duration_text1"><i>Duration:</i></string>
    <string name="dollar_sign"><b><i>$</i></b></string>
    <string name="offered"><b><i> $ offered</i></b></string>
    <string name="hint_description"><i>(Enter description)</i></string>
    <string name="by_submiting_this_challenge"><i>By submitting this challenge I commit to not infringe personal or intellectual property of anyone with the visual material I request and obtain, according to <u> Terms \u0026 Conditions.</u></i></string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_location_2">Choose location (2)</string>
    <string name="name">Name</string>
    <string name="country">Country:</string>
    <string name="address">Address</string>
    <string name="city">City:</string>
    <string name="please_select">Choose Details</string>
    <string name="starting_on">Starting on</string>
    <string name="reward">Reward: "</string>
    <string name="available_charge">($500 available - charge)</string>
    <string name="category">Category:</string>
    <string name="select_category">-&#160;Select category&#160;-</string>
    <string name="Loading">Loading&#8230;</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="twitter_login">Sign in with Twitter</string>
    <string name="instagram_login">Sign in with Instagram</string>
    <string name="google_login">Sign in with Google+</string>
    <string name="test_string">Lorem ipsum dolor sit amet</string>
    <string name="hint_tap_a_cloudlet"><i>Tap a cloudlet to see challenge details, or tap the pin icon above to create yours</i></string>
    <string name="text_underline_location"><u><b><i> VietNam, Ho Chi Minh, Truong Chinh 7</i></b></u></string>
    <string name="my_area">&#160;My Area</string>
    <string name="hint_title">Enter title&#8230;</string>
    <string name="make_it_global">Make it Global (no specific Location)</string>
    <string name="warning">Warning</string>
    <string name="must_agree_terms">You must agree to the Terms &amp; Conditions</string>
    <string name="title_not_empty">Title must not be empty</string>
    <string name="explanatory_not_empty">Explanatory image must not be empty</string>
    <string name="location_not_empty">Location must not be empty</string>
    <string name="starting_not_empty">Starting time must not be empty</string>
    <string name="duration_not_empty">Duration must not be empty</string>
    <string name="reward_not_empty">Reward must be minimum 0$</string>
    <string name="description_not_empty">Description must not be empty</string>
    <string name="country_not_empty">Country must not be empty</string>
    <string name="address_not_empty">Address must not be empty</string>
    <string name="create_challenge_successfully">Create challenge successfully</string>
    <string name="create_challenge_failed">Create challenge failed</string>
    <string name="challenge_nearby">challenge nearby</string>
    <string name="challenges_nearby">challenges nearby</string>
    <string name="challenge">challenge</string>
    <string name="challenges">challenges</string>
    <string name="remove">Remove this</string>
    <string name="add_another_location">Add</string>
    <string name="all_above_dialogs_go_here">(All above dialogs go here)</string>
    <string name="please_choose_a_location">Please choose a location</string>
    <string name="you_must_input_contry_before">You must input country before</string>
    <string name="title_new_challenge">Enter challenge\'s title&#8230;</string>
    <string name="title_detail_challenge">Take photos of garage rental/sale...</string>
    <string name="forgot_login"><u>forgot?</u></string>
    <string name="count_accept"><b><i> Accepted, </i></b></string>
    <string name="starting_in"><b><i> Starting in:</i></b></string>
    <string name="ongoing"> Ongoing </string>
    <string name="start_time"><i> 2d 2h 6m </i></string>
    <string name="duration_text"><b><i>, Duration: </i></b></string>
    <string name="reward_count"><b><i>$ offered</i></b></string>
    <string name="duration_time"><i> 6d 12h </i></string>
    <string name="location_not_found">Location not found!</string>
    <string name="not_enough_money">You don\'t have enough funds on your account</string>
    <string name="long_detail">Image or Location too long</string>
    <string name="not_choose_category">Please choosing category</string>
    <string name="email_not_formatted">Email address not formatted correctly!</string>
    <string name="email_is_exists">Email address exists!</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Password</string>
    <string name="location_not_correct">Location is not correct!</string>
    <string name="new_account_title">&#160;New Account</string>
    <string name="new_account_male"><u><i>male</i></u></string>
    <string name="new_account_female"><u><i>female</i></u></string>
    <string name="new_account_text_linked_profiles"><b><i>Linked profiles:</i></b></string>
    <string name="my_account_title">My Account</string>
    <string name="my_account_name"><u><i>Kris Karamarz</i></u></string>
    <string name="my_account_gender"><u><i>Male</i></u></string>
    <string name="my_account_submitted"><i> 0 </i></string>
    <string name="my_account_responded"><i> 0 </i></string>
    <string name="my_account_photo_resolution"><i><u> 3264 x 1826 </u></i></string>
    <string name="my_account_video_resolution"><i><u> 1920 x 1080 </u></i></string>
    <string name="my_account_blocked_users">Blocked Users</string>
    <string name="my_account_birthdate"><i><u>1976-12-31 </u></i></string>
    <string name="my_account_public_profile"><i> Public Profile </i></string>
    <string name="my_account_text_name"><i>Name:</i></string>
    <string name="my_account_text_gender"><i>Gender:</i></string>
    <string name="my_account_text_submitted"><i>Submitted: </i></string>
    <string name="my_account_text_responded"><i>Responded:</i></string>
    <string name="my_account_text_photo_resolution"><i>Photo resolution:</i></string>
    <string name="my_account_text_video_resolution"><i>Video resolution:</i></string>
    <string name="my_account_text_linked_profiles"><i>Linked profiles (%s):</i></string>
    <string name="my_account_text_birthdate"><i>Birthdate:</i></string>
    <string name="my_account_text_email"><i>Email:</i></string>
    <string name="my_account_text_others"><i>Others (%d):</i></string>
    <string name="my_account_text_new_password"><i>New Password:</i></string>
    <string name="my_account_text_confirm_password"><i>Confirm Password:</i></string>
    <string name="my_account_text_account_blance"><i>Account blance:</i></string>
    <string name="my_account_text_phone_contacts"><i>Phone Contacts </i></string>
    <string name="my_account_text_facebook_contacts"><i>Facebook</i></string>
    <string name="my_account_text_twitter_contacts"><i>Twitter</i></string>
    <string name="my_account_text_hide"><i><u>hide</u></i></string>
    <string name="my_account_text_unhide"><i><u>unhide</u></i></string>
    <string name="my_account_text_unlink"><i><u>unlink</u></i></string>
    <string name="my_account_text_change"><i><u>change</u></i></string>
    <string name="my_account_text_remove"><i><u>remove</u></i></string>
    <string name="my_account_text_resend"><i><u>resend</u></i></string>
    <string name="my_account_text_charge"><i><u>charge</u></i></string>
    <string name="my_account_text_withdraw"><i><u>withdraw</u></i></string>
    <string name="my_account_text_history"><i><u>history</u></i></string>
    <string name="time_duration_title">Duration</string>
    <string name="time_left_title">Time left:</string>
    <string name="time_reward_title">Reward</string>
    <string name="contry_not_empty">Country must not be empty</string>
    <string name="city_not_empty">City must not be empty</string>
    <string name="challenges_nearby_2">Challenges nearby</string>
    <string name="my_city">&#160;My city</string>
    <string name="my_country">&#160;My country</string>
    <string name="change_primery_and_paypal_email">Change primary and PayPal emails</string>
    <string name="select_email_address_purposes">Select email address to be used for contacting you (primary) and the one you use with your PayPal account. You can select the same email for both purposes:</string>
    <string name="unconfirmed_email_address">* Unconfirmed email address are not listed here. Please confirm them first</string>
    <string name="dont_show_again">Don\'t show this message again</string>
    <string name="delay_payment">Delay Payment</string>
    <string name="delay_payment_scrip">If you choose not to pay right away when submitting the challenge, it will remain invisible to other user until you Fund it.\n You will be able to find it in your Posted Chalenges view and either Fund them on by one or all at once.\n If you don\'t Fund them on time, thus before the start datetime comes, unpaid challeges will be automatic delete </string>
    <string name="options">Options</string>
    <string name="show_challenge">Show challenges</string>
    <string name="show_upcoming">Upcoming (starting in the future)</string>
    <string name="show_today">Today\'s (ongoing or starting today)</string>
    <string name="show_mine">Mine (posted by me)</string>
    <string name="show_ignored">Ignored</string>
    <string name="show_history">Historic (already expired)</string>
    <string name="sort">Sort</string>
    <string name="sort_reward">Reward</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_remainstart">Time left to begin</string>
    <string name="sort_interval">Time left to expire</string>
</resources>