<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_l" >

    <TextView
        android:id="@+id/tv_title_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_title_xxxxl"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_challenge"
        android:textSize="@dimen/text_title_m"
        android:textStyle="italic|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/blue_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_upcoming"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_today"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gray_line" />

        <LinearLayout
            android:id="@+id/ll_filter_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_mine"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_line_mine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gray_line" />

        <LinearLayout
            android:id="@+id/ll_filter_ignore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_ignored"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_line_ignore"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_history"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>
         <LinearLayout
             
            android:id="@+id/ll_filter_unpaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_filter_unpaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/custom_checkbox_design"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_m"
                android:gravity="center_vertical"
                android:text="@string/show_unpaid"
                android:textSize="@dimen/text_title_l"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="@dimen/text_title_m"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/blue_line" />

        <RadioButton
            android:id="@+id/rb_sort_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:text="@string/sort_reward"
            android:textSize="@dimen/text_title_l"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_sort_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:text="@string/sort_distance"
            android:textSize="@dimen/text_title_l"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_sort_remainstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:text="@string/sort_remainstart"
            android:textSize="@dimen/text_title_l"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_sort_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:text="@string/sort_interval"
            android:textSize="@dimen/text_title_l"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_l" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_cancel_confirm_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_ok_confirm_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ok_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>