<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog_delay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="@dimen/dialog1" >

    <TextView
        android:id="@+id/tv_title_comfirm_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/delay_payment"
        android:textSize="@dimen/text_title_xxxl"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvdialog_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/delay_payment_scrip"
        android:textSize="@dimen/text_title_l"
        android:textStyle="italic|bold" />
    <CheckBox
      android:id="@+id/dont_show"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dont_show_again"
     android:textSize="@dimen/text_title_m"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel_dialog_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_ok_dialog_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ok_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>