<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="@dimen/text_title_l"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/choose_location" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:text="@string/country" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:text="@string/city" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="20dp" >

                <TextView
                    android:id="@+id/tv_detail_country"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_bg"
                    android:paddingBottom="2dp"
                    android:gravity="left|top" />

                <TextView
                    android:id="@+id/tv_detail_city"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_bg"
                    android:paddingBottom="2dp"
                    android:gravity="left|top" />

                <TextView
                    android:id="@+id/tv_detail_address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_bg"
                    android:paddingBottom="2dp"
                    android:gravity="left|top" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_detail_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ok_button" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left" >

            <Button
                android:id="@+id/btn_detail_location_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_left_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right" >

            <Button
                android:id="@+id/btn_detail_location_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_right_arrow" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>